# yoken-kun

./: pyproject.toml
src/yoken_kun/: __init__.py  cli.py  config.py
src/yoken_kun/dialogue/: engine.py  prompts.py
src/yoken_kun/generator/: ai_readme.py
